test ref and figure linking

--- a/manuscript/manuscript.Rmd
+++ b/manuscript/manuscript.Rmd
@@ -121,11 +121,11 @@ Mixed results from prior studies may be due to two difficulties in quantifying l
 
 Second, much of our evidence for a connection between agricultural land-use and increased nutrient concentrations comes from studies focusing on a single watershed or on several watersheds within a single geographic region (Capel et al. 2018b, Daniel et al. 2010, Hayes et al. 2015, Renwick et al. 2008). These studies tend to focus on very detailed measures of agricultural activity such as tillage and other practices, nutrient amendments, and their spatial arrangement. However, studies at broader spatial scales (i.e., the macroscale, Heffernan et al. 2014), which aim to provide a more general view of relationships between lake nutrient concentrations and agriculture, tend to focus only on relatively coarse measures of agricultural activity (Fergus et al. 2016, Filstrup et al. 2018, Read et al. 2015, Schmadel et al. 2019). As a result, it is unclear to what extent the mixed results from prior broad-scale studies might be due to the limited use of detailed measures of agricultural activity or simply from regional variation. 
 
-There are two ways in which detailed (i.e., granular) measures of agricultural activity may be substituted for their coarse (i.e., aggregate) counterparts. The first is by using granular measures that are recorded in the same locations as their aggregate equivalents but are more descriptive. For example, in broad-scale studies, the proportion of land used for agriculture in a lake watershed is sometimes replaced by separate representations of the land used for pasture and the land used for row-crops (Abell et al. 2011, Collins et al., 2017). The second is by using granular measures that have the same description as their aggregate equivalents, but that are measured in more specific locations. For example, a small number of lake studies have compared the proportion of land used for agriculture in near-stream buffers versus the watershed as a whole (Gemesi et al. 2011, Soranno et al. 2015). Although the term granular can be used in a general sense to describe any detailed agricultural measure, we define the term more narrowly as only those that have a specific aggregate counterpart (Table 1). 
+There are two ways in which detailed (i.e., granular) measures of agricultural activity may be substituted for their coarse (i.e., aggregate) counterparts. The first is by using granular measures that are recorded in the same locations as their aggregate equivalents but are more descriptive. For example, in broad-scale studies, the proportion of land used for agriculture in a lake watershed is sometimes replaced by separate representations of the land used for pasture and the land used for row-crops (Abell et al. 2011, Collins et al., 2017). The second is by using granular measures that have the same description as their aggregate equivalents, but that are measured in more specific locations. For example, a small number of lake studies have compared the proportion of land used for agriculture in near-stream buffers versus the watershed as a whole (Gemesi et al. 2011, Soranno et al. 2015). Although the term granular can be used in a general sense to describe any detailed agricultural measure, we define the term more narrowly as only those that have a specific aggregate counterpart (Table \ref{table1}). 
 
 Prior use of granular data in broad-scale studies of lake water quality has been limited. For this reason, findings from broad-scale studies may be less useful in applied management settings because coarse (i.e. aggregate) land-use and land cover change metrics have become less widely used policy instruments (Morefield et al. 2016). Instead, recent policy interventions go beyond aggregate measures of agricultural activity to target more specific measures such as implementation of specific farming practices, no-till agriculture, and construction of riparian buffer strips (Capel et al. 2018a, NRC 2010, Yang et al. 2005). Thus, broad-scale studies could be made more relevant for informing policy interventions if they used covariates that have a similar level of granularity to those used in fine-scale studies. For example, implementation of no-till agriculture policies may be better informed by covariates at the granular crop level rather than solely by aggregate covariates like land used for agriculture (Figure S1). 
 
-\begin{figure}
+\begin{figure}[H]
   \begin{center}
     \includegraphics[width=0.48\textwidth,keepaspectratio]{../tables/01_predictors}
     \captionsetup{labelformat=empty}
@@ -168,7 +168,7 @@ further limited lakes in our study to those with at least 10% of the total water
 
 ### Model overview
 
-We evaluated the effects of agricultural activities on lake TN and TP concentrations using a Bayesian hierarchical modelling approach. A list of lake and watershed covariates with their summary statistics is available in Table 1. In the first part of our model evaluation, we compared models that each had only a single measure of watershed land-use along with all remaining non-watershed land-use predictors. These non-watershed land-use predictors were included in every fitted model and were defined as measures of near-stream land-use, soil characteristics, and lake and watershed characteristics. We took this approach of evaluating one watershed land-use measure at a time for two reasons: 1) because measures of watershed land-use were highly correlated, and 2) because it allowed us to more rigorously test our expectation that granular measures of agriculture provide additional explanatory power beyond that offered by more typical aggregate measures of agriculture. In the second part of our model evaluation, we selected the top-ranked watershed land-use model according to our selection criteria for lake N and P (see below) for further inspection of their standardized coefficient values (See Table \ref{table1}). Our models were of the form:
+We evaluated the effects of agricultural activities on lake TN and TP concentrations using a Bayesian hierarchical modelling approach. A list of lake and watershed covariates with their summary statistics is available in Table \ref{table1}. In the first part of our model evaluation, we compared models that each had only a single measure of watershed land-use along with all remaining non-watershed land-use predictors. These non-watershed land-use predictors were included in every fitted model and were defined as measures of near-stream land-use, soil characteristics, and lake and watershed characteristics. We took this approach of evaluating one watershed land-use measure at a time for two reasons: 1) because measures of watershed land-use were highly correlated, and 2) because it allowed us to more rigorously test our expectation that granular measures of agriculture provide additional explanatory power beyond that offered by more typical aggregate measures of agriculture. In the second part of our model evaluation, we selected the top-ranked watershed land-use model according to our selection criteria for lake N and P (see below) for further inspection of their standardized coefficient values (See Table \ref{table1}). Our models were of the form:
 
 \begin{equation}
 \begin{split}
@@ -178,7 +178,7 @@ We evaluated the effects of agricultural activities on lake TN and TP concentrat
 \end{split}
 \end{equation}
 
-\noindent where yi is either TN or TP concentration for lake i, and $\beta$ are “global” (i.e. fixed effect) coefficients. This set of global coefficients included estimates for watershed soil characteristics, near-stream land-use, as well as fertilizer and manure inputs for each lake (Xi). Whereas $\beta$ coefficients were estimated as fixed effects, $\gamma$ coefficients and $\alpha$ intercepts were estimated as varying (i.e. random) slopes and intercepts respectively among m hydrologic regions j on watershed land-use (Wij). Region specific intercepts $\alpha$ and $\gamma$ slopes were assumed to come from a multivariate normal distribution (MVN) where $\mu_\alpha$ and $\mu_{\gamma1}$ are their respective grand mean (i.e., population level) estimates. We tested a variety of watershed land-use types for Wij, including both granular and more aggregate measures of agricultural activity. Our only aggregate measure of agricultural activity was agricultural land-use whereas we used several granular measures of agricultural activity. These included both detailed measures of watershed land-use such as corn and soybean cover as well as more detailed measures of nutrient inputs and near-stream land-use (Table 1). We included measures of both N and P inputs in both N and P models because of the possibility for stoichiometric interaction. Given our regularization scheme (i.e. our use of “horseshoe priors” described below) there was little reason to exclude P inputs from N models (and vice versa) because unless P inputs are strongly related to lake TN concentration, their coefficient will be forced close to zero.
+\noindent where yi is either TN or TP concentration for lake i, and $\beta$ are “global” (i.e. fixed effect) coefficients. This set of global coefficients included estimates for watershed soil characteristics, near-stream land-use, as well as fertilizer and manure inputs for each lake (Xi). Whereas $\beta$ coefficients were estimated as fixed effects, $\gamma$ coefficients and $\alpha$ intercepts were estimated as varying (i.e. random) slopes and intercepts respectively among m hydrologic regions j on watershed land-use (Wij). Region specific intercepts $\alpha$ and $\gamma$ slopes were assumed to come from a multivariate normal distribution (MVN) where $\mu_\alpha$ and $\mu_{\gamma1}$ are their respective grand mean (i.e., population level) estimates. We tested a variety of watershed land-use types for Wij, including both granular and more aggregate measures of agricultural activity. Our only aggregate measure of agricultural activity was agricultural land-use whereas we used several granular measures of agricultural activity. These included both detailed measures of watershed land-use such as corn and soybean cover as well as more detailed measures of nutrient inputs and near-stream land-use (Table \ref{table1}). We included measures of both N and P inputs in both N and P models because of the possibility for stoichiometric interaction. Given our regularization scheme (i.e. our use of “horseshoe priors” described below) there was little reason to exclude P inputs from N models (and vice versa) because unless P inputs are strongly related to lake TN concentration, their coefficient will be forced close to zero.
 
 All models had the same set of fixed effect coefficients while each individual model used a single different watershed land-use variable as a random effect. This modelling strategy is supported by our view that watershed land-use is an indirect proxy (sensu Burcher et al. 2007, Hayes et al. 2015, King et al. 2005) for other unquantifiable agricultural activities. Therefore, we expect the makeup of specific activities represented by this indirect measure to vary regionally. This contrasts with other predictor variables e like lake depth, where we have little evidence from prior studies that its effect on lake nutrient concentrations is spatially variable. Prior to model fitting, we examined the bivariate relationships between lake nutrient concentrations and all predictor variables using Pearson’s correlation coefficients (Figure A5) to determine the overall structure of the predictor dataset. We did not use the results of this exercise for building our model, performing model selection, or variable selection. For qualitative analysis of our model results, we classified predictor variables following Collins et al. (2017) into categories based on the dominant mechanism affecting lake nutrient concentrations, which includes nutrient inputs, nutrient transport, spatial configuration of land-use in stream buffers (Spatial config.), lake characteristics, and watershed land-use (LULC).
 
@@ -190,7 +190,7 @@ We used the default settings of brms to generate posterior estimates using four 
 
 ### Effects of agriculture on lake nitrogen and phosphorus
 
-Lake characteristics (e.g., maximum depth and watershed to lake area ratio) along with measures of nutrient transport (e.g., baseflow) and near-stream agriculture were significant predictors in all lake N and P models that we fit. When we  compared among different models for each nutrient individually, we found that those with agricultural watershed O land-use (in the aggregate sense) were top-ranked (i.e., had the lowest absolute value leave-one-out cross validation score) for models of both TN and TP concentrations (Figure 2, Table 2). Although we observed no difference in the specific watershed land-use predictor used in each top-ranked model, we found differences in the extent to which each top-ranked model was substantially different from lower ranked models. For example, in the case of P, all models had nearly identical R2 (0.63) and the difference between the top-ranked model and second ranked model was modest ($\Delta$ELPD = 0.41). For N models, however, agricultural and corn land-use models had higher R2 (0.58) compared to other models and the difference between the top-ranked and second ranked model was more substantial ($\Delta$ELPD = 2.58, Figure 2, Table 1).
+Lake characteristics (e.g., maximum depth and watershed to lake area ratio) along with measures of nutrient transport (e.g., baseflow) and near-stream agriculture were significant predictors in all lake N and P models that we fit. When we  compared among different models for each nutrient individually, we found that those with agricultural watershed O land-use (in the aggregate sense) were top-ranked (i.e., had the lowest absolute value leave-one-out cross validation score) for models of both TN and TP concentrations (Figure 2, Table 2). Although we observed no difference in the specific watershed land-use predictor used in each top-ranked model, we found differences in the extent to which each top-ranked model was substantially different from lower ranked models. For example, in the case of P, all models had nearly identical R2 (0.63) and the difference between the top-ranked model and second ranked model was modest ($\Delta$ELPD = 0.41). For N models, however, agricultural and corn land-use models had higher R2 (0.58) compared to other models and the difference between the top-ranked and second ranked model was more substantial ($\Delta$ELPD = 2.58, Figure 2, Table \ref{table1}).
 
 \begin{figure}
   \begin{center}
@@ -224,7 +224,7 @@ No predictors in the nutrient input category appeared to be strongly related to 
 
 ### Regional variation in agriculture sensitivity
 
-Both TN and TP concentrations were sensitive to measures of watershed land-use as well as near-stream agriculture (Figure 2, Table 1). Despite these similarities, we found differences in both the magnitude of these effects and the extent to which we observed regional variation in watershed land-use sensitivity for N and P models (Figure 4). For P, there was little evidence that sensitivity to watershed land-use was regionally variable. More specifically, the credible intervals for the slope of each individual region overlapped the global slope estimate (Figure 4). In contrast, for N we found evidence for regional variation in sensitivity to watershed land-use. For this nutrient, the credible intervals for 2 of the 37 regions did not overlap the global estimate (Figure 4). These regions were found in parts of Iowa, Minnesota, and Illinois and appear to be more sensitive to watershed land-use – i.e., lake N increases at a faster rate per unit increase in agricultural land-use compared to other regions (Figure 5). The median soil clay content of watersheds in these regions was higher than the median across watersheds in all other regions (Figure 6). Furthermore, these two regions had a unique combination of both high soil clay content and extensive tile drainage (Figure S6).
+Both TN and TP concentrations were sensitive to measures of watershed land-use as well as near-stream agriculture (Figure 2, Table \ref{table1}). Despite these similarities, we found differences in both the magnitude of these effects and the extent to which we observed regional variation in watershed land-use sensitivity for N and P models (Figure 4). For P, there was little evidence that sensitivity to watershed land-use was regionally variable. More specifically, the credible intervals for the slope of each individual region overlapped the global slope estimate (Figure 4). In contrast, for N we found evidence for regional variation in sensitivity to watershed land-use. For this nutrient, the credible intervals for 2 of the 37 regions did not overlap the global estimate (Figure 4). These regions were found in parts of Iowa, Minnesota, and Illinois and appear to be more sensitive to watershed land-use – i.e., lake N increases at a faster rate per unit increase in agricultural land-use compared to other regions (Figure 5). The median soil clay content of watersheds in these regions was higher than the median across watersheds in all other regions (Figure 6). Furthermore, these two regions had a unique combination of both high soil clay content and extensive tile drainage (Figure S6).
 
 \begin{figure}
   \begin{center}
