--- a/manuscript/manuscript.Rmd
+++ b/manuscript/manuscript.Rmd
@@ -151,7 +151,7 @@ We analyzed data on lake total nitrogen (TN) and total phosphorus (TP) concentra
 
 Our first source for granular agricultural information was the 2010 Cropland Data Layer (CDL, USDA 2019), which we used to generate lake watershed and stream buffer estimates of the proportion of land cover due to specific crops such as corn and soybeans. We used the R package cdlTools to access CDL products (Chen 2018). We used the 2010 CDL data because this was the first year of high resolution (30 x 30m) CDL data collection that matched our lake nutrient data collection window. Because the CDL contains detailed coverage for dozens of crops, including rare crops with little to no coverage, we re-categorized CDL data based on Lark et al. (2015) to a more limited set of categories (Table A1). 
 
-As a more granular representation of watershed agricultural land use, we measured the proportion of land cover in agricultural and “natural” land-uses in 100-m buffers of lake shorelines and streams for each lake watershed. We chose a 100-m buffer width because this width is inclusive of nearly all “riparian buffers” (Mayer et al. 2007). Here agricultural land-use is defined in the aggregate sense as the proportion of land used for agriculture in a lake’s watershed whereas “natural” land-uses include the sum of all non-agriculture and non-developed CDL classes. We identified the streams associated with each lake using the stream network extraction tool in the nhdR interface e (Stachelek 2019) to the National Hydrography Network (USGS 2019). We compiled soil characteristics for each lake watershed using the Gridded Soil Survey Geographic Database (gSSURGO, USDA 2019) where we used the python package gssurgo (Stachelek 2019) to access gSSURGO  products. One such product was wetland potential, defined as the percentage of the soil grid that meets the criteria for hydric soils formed under conditions of saturation, flooding, or ponding long enough to develop anaerobic conditions but not so long as to be classified as a permanent waterbody (USDA 2019). Finally, we compiled mean annual nutrient inputs via fertilizer and manure to lake watersheds from 1982-2001 using county level data provided by Ruddy et al. (2006). We spatially aligned these county level estimates to lake watershed polygons provided by LAGOS-NE (Soranno and Cheruvelil 2017) using the area-weighted interpolation functions provided by the sf R package (Pebesma 2019). All of our data and data processing code are available at [Zenodo DOI].
+As a more granular representation of watershed agricultural land use, we measured the proportion of land cover in agricultural and “natural” land-uses in 100-m buffers of lake shorelines and streams for each lake watershed. We chose a 100-m buffer width because this width is inclusive of nearly all “riparian buffers” (Mayer et al. 2007). Here agricultural land-use is defined in the aggregate sense as the proportion of land used for agriculture in a lake’s watershed whereas “natural” land-uses include the sum of all non-agriculture and non-developed CDL classes. We identified the streams associated with each lake using the stream network extraction tool in the nhdR interface (Stachelek 2019) to the National Hydrography Network (USGS 2019). We compiled soil characteristics for each lake watershed using the Gridded Soil Survey Geographic Database (gSSURGO, USDA 2019) where we used the python package gssurgo (Stachelek 2019) to access gSSURGO  products. One such product was wetland potential, defined as the percentage of the soil grid that meets the criteria for hydric soils formed under conditions of saturation, flooding, or ponding long enough to develop anaerobic conditions but not so long as to be classified as a permanent waterbody (USDA 2019). Finally, we compiled mean annual nutrient inputs via fertilizer and manure to lake watersheds from 1982-2001 using county level data provided by Ruddy et al. (2006). We spatially aligned these county level estimates to lake watershed polygons provided by LAGOS-NE (Soranno and Cheruvelil 2017) using the area-weighted interpolation functions provided by the sf R package (Pebesma 2019). All of our data and data processing code are available at [Zenodo DOI].
 
 ### Location information
 
@@ -171,11 +171,11 @@ further limited lakes in our study to those with at least 10% of the total water
 We evaluated the effects of agricultural activities on lake TN and TP concentrations using a Bayesian hierarchical modelling approach. A list of lake and watershed covariates with their summary statistics is available in Table \ref{table1}. In the first part of our model evaluation, we compared models that each had only a single measure of watershed land-use along with all remaining non-watershed land-use predictors. These non-watershed land-use predictors were included in every fitted model and were defined as measures of near-stream land-use, soil characteristics, and lake and watershed characteristics. We took this approach of evaluating one watershed land-use measure at a time for two reasons: 1) because measures of watershed land-use were highly correlated, and 2) because it allowed us to more rigorously test our expectation that granular measures of agriculture provide additional explanatory power beyond that offered by more typical aggregate measures of agriculture. In the second part of our model evaluation, we selected the top-ranked watershed land-use model according to our selection criteria for lake N and P (see below) for further inspection of their standardized coefficient values (See Table \ref{table1}). Our models were of the form:
 
 \begin{equation}
-\begin{split}
-& y_i = N(\alpha_{j(i)} + \beta_1 * X_{1i}...\beta_n * X_{ni} + \gamma_{1j(i)} * W_{1i} + \gamma_{mj{i}} * W_{mi})\\
+\begin{aligned}
+y_i = N(\alpha_{j(i)} + \beta_1 &* X_{1i}...\beta_n * X_{ni} + \gamma_{1j(i)} * W_{1i} + \gamma_{mj{i}} * W_{mi})\\
 & \binom{\alpha_j}{\gamma_{1j}} \sim MVN\left( \binom{\mu_\alpha}{\mu_{\gamma1}}, \Sigma \right)
 \label{eqn1} 
-\end{split}
+\end{aligned}
 \end{equation}
 
 \noindent where yi is either TN or TP concentration for lake i, and $\beta$ are “global” (i.e. fixed effect) coefficients. This set of global coefficients included estimates for watershed soil characteristics, near-stream land-use, as well as fertilizer and manure inputs for each lake (Xi). Whereas $\beta$ coefficients were estimated as fixed effects, $\gamma$ coefficients and $\alpha$ intercepts were estimated as varying (i.e. random) slopes and intercepts respectively among m hydrologic regions j on watershed land-use (Wij). Region specific intercepts $\alpha$ and $\gamma$ slopes were assumed to come from a multivariate normal distribution (MVN) where $\mu_\alpha$ and $\mu_{\gamma1}$ are their respective grand mean (i.e., population level) estimates. We tested a variety of watershed land-use types for Wij, including both granular and more aggregate measures of agricultural activity. Our only aggregate measure of agricultural activity was agricultural land-use whereas we used several granular measures of agricultural activity. These included both detailed measures of watershed land-use such as corn and soybean cover as well as more detailed measures of nutrient inputs and near-stream land-use (Table \ref{table1}). We included measures of both N and P inputs in both N and P models because of the possibility for stoichiometric interaction. Given our regularization scheme (i.e. our use of “horseshoe priors” described below) there was little reason to exclude P inputs from N models (and vice versa) because unless P inputs are strongly related to lake TN concentration, their coefficient will be forced close to zero.
